--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1588,6 +1588,9 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+.wrapper {
+  padding-top: 30px;
+}
 @media (min-width: 768px) {
   .container {
     width: 750px;
